# human-resource-api

./: .gitignore  .gitmodules  COPYING  README.adoc  README.md  SUMMARY  gulpfile.ts  package-lock.json  package.json
data/: README.in.adoc  SUMMARY
src/: meson.build  meson_options.txt
src/docs/design_manual/: SUMMARY  design_manual.adoc  meson.build
